# controllers/users.js
@@ -1,6 +1,6 @@
 // User Records Controller
 
-const mongodb = require('../database/connection');
+const mongoDb = require('../database/connection');
 const {ObjectId} = require('mongodb');
 // const collection = 'users';
 
@@ -39,11 +39,39 @@ const {ObjectId} = require('mongodb');
   /////// POST ///////
 //POST
 const addUser = async (req, res) => {
+  /*  #swagger.summary = 'Add a single user record.'
+        #swagger.description = 'Adds a single user record using information provided in a JSON body.'
+        #swagger.tags = ['Users']
+        #swagger.parameters['record'] = {
+          in: 'body',
+          description: 'A valid JSON object with required data elements populated.',
+          type: 'object',
+          format: 'json',
+          schema: {
+            "_id": "a1b2c3d4e5f6a1b2c3d4e5f6",
+            "userName": "Joseph Smith",
+            "userPassword": "StickPuller1830"
+          }
+        }
+        #swagger.responses[201] = {
+          description: "Created - A single user record is added with the data given. The return result provides the newly assigned ID number.",
+          schema: {
+            acknowledged: true,
+            insertedId: '<hexadecimal string>'
+          }
+        }
+        #swagger.responses[422] = {
+          description: 'Invalid or missing data error.'
+        }
+        #swagger.responses[500] = {
+          description: 'Internal server or database error.'
+        }
+    */
     const user = {
         userName: req.body.userName,
         userPassword: req.body.userPassword
     };
-    const result = await mongodb.getDb().db('TempleWork').collection('users').insertOne(user);
+    const result = await mongoDb.getDb().db('TempleWork').collection('users').insertOne(user);
     if(result.acknowledged){
         res.status(201).json(result);
     } else {
@@ -53,6 +81,42 @@ const addUser = async (req, res) => {
 
 //PUT
 const updateUser = async (req, res) => {
+  /*  #swagger.summary = 'Update a single user record.'
+        #swagger.description = 'Updates the user record identified by `id` using information provided in a JSON body.'
+        #swagger.tags = ['Users']
+        #swagger.parameters['id'] = {
+          in: 'path',
+          description: 'A valid and unique 24-digit hexadecimal string that identifies a user record.',
+          type: 'string',
+          format: 'hex',
+        } 
+        #swagger.parameters['record'] = {
+          in: 'body',
+          description: 'A valid JSON object populated with one or more data fields to be changed.',
+          type: 'object',
+          format: 'json',
+          schema: {
+            "_id": "a1b2c3d4e5f6a1b2c3d4e5f6",
+            "userName": "Joseph Smith",
+            "userPassword": "StickPuller1830"
+          }
+        }
+        #swagger.responses[204] = {
+          description: "Success - The user record identified by `id` is updated with the new data. No data is returned other than this status.",
+        }
+        #swagger.responses[400] = {
+          description: "Invalid ID provided.",
+        }
+        #swagger.responses[404] = {
+          description: "Not found.",
+        }
+        #swagger.responses[422] = {
+          description: 'Invalid or missing data error.'
+        }
+        #swagger.responses[500] = {
+          description: "Internal server or database error.",
+        }
+    */
     if (!ObjectId.isValid(req.params.id)) {
         res.status(400).json('Must use a valid user id to update a user.');
     }
@@ -61,7 +125,7 @@ const updateUser = async (req, res) => {
         userName: req.body.userName,
         userPassword: req.body.userPassword
     };
-    const result = await mongodb.getDb().db('TempleWork').collection('users').replaceOne({ _id: userId }, updatedUser);
+    const result = await mongoDb.getDb().db('TempleWork').collection('users').replaceOne({ _id: userId }, updatedUser);
     console.log(result)
     if(result.modifiedCount > 0){
         res.status(204).send();
@@ -76,7 +140,7 @@ const deleteData = async (req, res, next) => {
       res.status(400).json('Must use a valid id to delete user.');
     }
     const userId = new ObjectId(req.params.id);
-    const result = await mongodb.getDb().db('TempleWork').collection('users').deleteOne({ _id: userId }, true);
+    const result = await mongoDb.getDb().db('TempleWork').collection('users').deleteOne({ _id: userId }, true);
     console.log(result)
     if(result.deletedCount > 0){
         res.status(200).send();
