# swagger/swaggerDoc.json
@@ -520,40 +520,59 @@
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Family Members"
+        ],
+        "summary": "Add a single family member record.",
+        "description": "Adds a single family member record using information provided in a JSON body.",
         "parameters": [
           {
-            "name": "body",
+            "name": "record",
             "in": "body",
+            "description": "A valid JSON object with required data elements populated.",
+            "format": "json",
             "schema": {
               "type": "object",
               "properties": {
+                "_id": {
+                  "type": "string",
+                  "example": "0123456789abcdef01234567"
+                },
                 "fname": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Joseph"
                 },
                 "lname": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Smith"
                 },
                 "gender": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Male"
                 },
                 "birthday": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "23-Dec-1805"
                 },
                 "baptism": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "15-May-1829"
                 },
                 "confirmation": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "15-May-1829"
                 },
                 "initiatory": {
-                  "example": "any"
+                  "type": "string",
+                  "example": ""
                 },
                 "endowment": {
-                  "example": "any"
+                  "type": "string",
+                  "example": ""
                 },
                 "sealing": {
-                  "example": "any"
+                  "type": "string",
+                  "example": ""
                 }
               }
             }
@@ -561,10 +580,29 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Created - A single family member record is added with the data given. The return result provides the newly assigned ID number.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "acknowledged": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "insertedId": {
+                  "type": "string",
+                  "example": "<hexadecimal string>"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "422": {
+            "description": "Invalid or missing data error."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal server or database error."
           }
         }
       }
@@ -653,46 +691,67 @@
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Family Members"
+        ],
+        "summary": "Update a single family member record.",
+        "description": "Updates the family member record identified by `id` using information provided in a JSON body.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "A valid and unique 24-digit hexadecimal string that identifies a family member record.",
+            "format": "hex"
           },
           {
-            "name": "body",
+            "name": "record",
             "in": "body",
+            "description": "A valid JSON object populated with one or more data fields to be changed.",
+            "format": "json",
             "schema": {
               "type": "object",
               "properties": {
+                "_id": {
+                  "type": "string",
+                  "example": "0123456789abcdef01234567"
+                },
                 "fname": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Joseph"
                 },
                 "lname": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Smith"
                 },
                 "gender": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Male"
                 },
                 "birthday": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "23-Dec-1805"
                 },
                 "baptism": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "15-May-1829"
                 },
                 "confirmation": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "15-May-1829"
                 },
                 "initiatory": {
-                  "example": "any"
+                  "type": "string",
+                  "example": ""
                 },
                 "endowment": {
-                  "example": "any"
+                  "type": "string",
+                  "example": ""
                 },
                 "sealing": {
-                  "example": "any"
+                  "type": "string",
+                  "example": ""
                 }
               }
             }
@@ -700,13 +759,19 @@
         ],
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Success - The family member record identified by `id` is updated with the new data. No data is returned other than this status."
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Invalid ID provided."
+          },
+          "404": {
+            "description": "Not found."
+          },
+          "422": {
+            "description": "Invalid or missing data error."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal server or database error."
           }
         }
       },
@@ -802,19 +867,35 @@
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Temples"
+        ],
+        "summary": "Add a single temple record.",
+        "description": "Adds a single temple record using information provided in a JSON body.",
         "parameters": [
           {
-            "name": "body",
+            "name": "record",
             "in": "body",
+            "description": "A valid JSON object with required data elements populated.",
+            "format": "json",
             "schema": {
               "type": "object",
               "properties": {
+                "_id": {
+                  "type": "string",
+                  "example": "a1b2c3d4e5f6a1b2c3d4e5f6"
+                },
+                "templeId": {
+                  "type": "string",
+                  "example": "1"
+                },
                 "templeName": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Mount Timpanogos Utah Temple"
                 },
                 "templeAddress": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "742 N 900 E, American Fork, UT 84003, USA"
                 }
               }
             }
@@ -822,10 +903,29 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Created - A single temple record is added with the data given. The return result provides the newly assigned ID number.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "acknowledged": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "insertedId": {
+                  "type": "string",
+                  "example": "<hexadecimal string>"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "422": {
+            "description": "Invalid or missing data error."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal server or database error."
           }
         }
       }
@@ -890,25 +990,43 @@
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Temples"
+        ],
+        "summary": "Update a single temple record.",
+        "description": "Updates the temple record identified by `id` using information provided in a JSON body.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "A valid and unique 24-digit hexadecimal string that identifies a temple record.",
+            "format": "hex"
           },
           {
-            "name": "body",
+            "name": "record",
             "in": "body",
+            "description": "A valid JSON object populated with one or more data fields to be changed.",
+            "format": "json",
             "schema": {
               "type": "object",
               "properties": {
+                "_id": {
+                  "type": "string",
+                  "example": "a1b2c3d4e5f6a1b2c3d4e5f6"
+                },
+                "templeId": {
+                  "type": "string",
+                  "example": "1"
+                },
                 "templeName": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Mount Timpanogos Utah Temple"
                 },
                 "templeAddress": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "742 N 900 E, American Fork, UT 84003, USA"
                 }
               }
             }
@@ -916,13 +1034,19 @@
         ],
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Success - The temple record identified by `id` is updated with the new data. No data is returned other than this status."
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Invalid ID provided."
+          },
+          "404": {
+            "description": "Not found."
+          },
+          "422": {
+            "description": "Invalid or missing data error."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal server or database error."
           }
         }
       },
@@ -1027,7 +1151,11 @@
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "summary": "Add a single user record.",
+        "description": "Adds a single user record using information provided in a JSON body.",
         "parameters": [
           {
             "name": "id",
@@ -1036,16 +1164,24 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "record",
             "in": "body",
+            "description": "A valid JSON object with required data elements populated.",
+            "format": "json",
             "schema": {
               "type": "object",
               "properties": {
+                "_id": {
+                  "type": "string",
+                  "example": "a1b2c3d4e5f6a1b2c3d4e5f6"
+                },
                 "userName": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Joseph Smith"
                 },
                 "userPassword": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "StickPuller1830"
                 }
               }
             }
@@ -1053,10 +1189,29 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Created - A single user record is added with the data given. The return result provides the newly assigned ID number.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "acknowledged": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "insertedId": {
+                  "type": "string",
+                  "example": "<hexadecimal string>"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "422": {
+            "description": "Invalid or missing data error."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal server or database error."
           }
         }
       },
@@ -1107,19 +1262,31 @@
     },
     "/users/": {
       "post": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "summary": "Add a single user record.",
+        "description": "Adds a single user record using information provided in a JSON body.",
         "parameters": [
           {
-            "name": "body",
+            "name": "record",
             "in": "body",
+            "description": "A valid JSON object with required data elements populated.",
+            "format": "json",
             "schema": {
               "type": "object",
               "properties": {
+                "_id": {
+                  "type": "string",
+                  "example": "a1b2c3d4e5f6a1b2c3d4e5f6"
+                },
                 "userName": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Joseph Smith"
                 },
                 "userPassword": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "StickPuller1830"
                 }
               }
             }
@@ -1127,10 +1294,29 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Created - A single user record is added with the data given. The return result provides the newly assigned ID number.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "acknowledged": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "insertedId": {
+                  "type": "string",
+                  "example": "<hexadecimal string>"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "422": {
+            "description": "Invalid or missing data error."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal server or database error."
           }
         }
       }
